# PushStream_android

./: settings.gradle
app/: build.gradle
app/ffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/ffmpeg/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/ffmpeg/armeabi/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/me/oz/pushstream/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  test.cpp
app/src/main/java/me/oz/pushstream/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/me/oz/pushstream/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
